[tool.poetry]
name = "basethon"
version = "0.1.0"
description = ""
authors = ["trojvn <mrx.trojan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.37.0"
jsoner = {git = "https://github.com/trojvn/jsoner.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
